# book

./: Cargo.toml
.github/workflows/: check.yml  lint.yml  release.yml  tag.yml  test.yml
src/: commands.rs  main.rs
src/commands/: add_icon.rs
