[package]
name = "book"
version = "0.1.2"
edition = "2021"
author = "Ron Shavit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.14", features = ["derive"] }
convert_case = "0.6.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
xml-rs = "0.8.15"
